--- a/styles/style.css
+++ b/styles/style.css
@@ -119,6 +119,15 @@ footer{
     width: 900px;
 }
 
+.graph-summary{
+    background: #bce5ed;
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
+    border-radius: 16px;
+    font-weight: 700;    
+}
+
 .y.axis > g > text {
     font-size: 8px;
 }
