--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 200vh;
+    height: 100vh;
 }
 
 header{
@@ -25,6 +25,12 @@ legend{
 }
 
 @media only screen and (max-width: 1024px) {
+    .content{
+        justify-content: center;
+    }
+}
+
+@media only screen and (max-width: 1385px) {
     .content{
         justify-content: center;
     }
@@ -69,6 +75,20 @@ legend{
     padding-top: 12px;
     border-top: 1px solid #bce5ed; 
 }
+
+/* table */
+
+.table-wrap{
+
+}
+
+.wtHolder{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* table */
 
 footer{
     height: 100px;
@@ -129,13 +149,22 @@ footer{
     }
 
 }
+
+@media only screen and (max-width: 1385px){
+    .graph {
+        width: 700px;
+    }
+
+}
+
 .graph-summary{
     background: #bce5ed;
     display: flex;
     flex-direction: column;
     padding: 16px;
     border-radius: 16px;
-    font-weight: 700;    
+    font-weight: 700;
+    margin: 16px;    
 }
 
 .y.axis > g > text {
