--- a/styles/style.css
+++ b/styles/style.css
@@ -176,11 +176,11 @@ footer{
 } */
 
 #special-above {
-    color: #bce5ed;
+    color: #448e9d;
 }
 
 #special-below {
-    color: #bce5ed;
+    color: #448e9d;
 }
 
 .total-cell{
